pushed my figma work to the Github repo

--- a/index.html
+++ b/index.html
@@ -30,6 +30,33 @@
         </div>
 
     </div>
+    <div class="seconddiv">
+        <img class="Paul" src="Image/autri-taheri-Vj2zHsZ1uqw-unsplash 1.png" alt="">
+        <h1 class="About">About Me</h1>
+        <p class="project">
+            Paul Amusan is a young, energetic, and talented fashion designer who focuses on his men’s clothing line, Paul Amusan. His work draws inspiration from local Nigerian fabrics coupled with Japanese tailoring designs. His designs are masculine, yet modern and trendy by way of transforming an ordinary look into a sophisticated design that embraces elegance. <br> <br>
+
+            I began acquired his love for fashion when he was a young boy where he spent his time sketching and drawing. He loves to work with colors, and his awesome talent has seen his pieces worn by famous politicians and celebrities. Young and successful, he is a talented fashion designer to watch out for as his name continues to cause ripples in both the local and global fashion industries. <br> <br>
+
+            While in New York, I was employed in the Charivari Boutique where president of the company, Barbara Weiser, noticed my potential and passion for unique fashion and helped me launch my first fashion collection. My passion for African fashion is profound. “Everything begins for me with the print and fabric, which usually has some shine,” exclaims Faturoti. My deep African roots, as well as extensive global experience with having lived and worked in New York and Milan have been instrumental in her success and international spotlight. <br> <br>
+
+            My pieces are also sold globally in the UK, US, and France. Anthony uses his talent to make an impact on the community through a mentoring program he runs that helps young and upcoming Nigerian designers excel and compete on a global platform. Nature, colors, and artwork are his main sources of inspiration.
+        </p>
+    </div>
+    <div class="wrapper">
+        <h1 class="Gallery">Gallery</h1>
+        <p class="branch">Have a look at what I am doing</p>
+        <div class="threepics">
+            <img src="Image/pic 1.png" alt="">
+            <img src="Image/pic 2.png" alt="">
+            <img src="Image/pic 3.png" alt="">
+        </div>
+        <div>
+            <img src="Image/pic 4.png" alt="">
+            <img src="Image/pic 5.png" alt="">
+            <img src="Image/pic 6.png" alt="">
+        </div>
+    </div>
     
 </body>
 </html>
